--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta property="og:image" content="https://raw.githubusercontent.com/Moudles/carcajous/master/tiser.png">
+<meta property="og:image" content="https://cdn.discordapp.com/attachments/745776065955233903/745813723137966210/tiser.png">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
