--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ body, html {height: 100%}
 }
 </style>
 <body>
+ <audio controls>
+ <source src="mincraf.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+ </audio>
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft">
