--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body, html {height: 100%}
 }
 </style>
 <body>
- <audio>
+ <audio autoplay>
  <source src="mincraf.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
  </audio>
