--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@ Your browser does not support the audio element.
   <div class="w3-display-bottomright w3-padding-large">
     Image by PoudlardRP
   </div>
+  <script>
+    var audio=document.createElement('audio');
+    var first=true;
+          window.addEventListener('mousedown',onmousedown);
+ 
+      function onmousedown(){
+        if(!first) return;
+        first=false;
+        audio.src="mincraf.mp3";
+        audio.play();
+    }
+  </script>
 </div>
 
 </body>
